--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "cookie": "^1.0.2",
+    "flatpickr": "^4.6.13",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.20.0",
     "next": "16.0.3",
