--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "cookie": "^1.0.2",
@@ -17,7 +18,8 @@
     "mongoose": "^8.20.0",
     "next": "^16.0.7",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "turbo": "^2.6.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
