--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pusher-js": "^8.4.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-easy-crop": "^5.5.6",
     "resend": "^6.5.2",
     "turbo": "^2.6.3"
   },
