--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^3.0.3",
     "cookie": "^1.0.2",
     "flatpickr": "^4.6.13",
+    "framer-motion": "^12.24.7",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.20.0",
     "next": "^16.0.7",
