--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "19.2.0",
     "react-easy-crop": "^5.5.6",
     "react-multi-date-picker": "^4.5.2",
+    "recharts": "^3.7.0",
     "resend": "^6.5.2",
     "turbo": "^2.6.3"
   },
@@ -37,8 +38,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "baseline-browser-mapping": "^2.9.19",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.3",
+    "eslint": "^10.0.1",
+    "eslint-config-next": "^0.2.4",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
